# SnakeGLFW

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
dependencies/src/: glad.c
src/: entry.cpp  graphic_math.h
